package com.losatuendos.model.patrones;

import com.losatuendos.model.Prenda;

public interface Observer {
    void update(Prenda prenda);
}
